Nav spacing fixes

--- a/hines/static/hines/src/sass/partials/_nav.scss
+++ b/hines/static/hines/src/sass/partials/_nav.scss
@@ -63,11 +63,11 @@
 
 .nav--pagination {
 
-  .nav__item {
+  .nav__item:not(.nav__item--next) {
     // More spaced out because they're so small:
     padding-right: ($nav-link-padding-x * 2);
 
-    &:first-child {
+    &:first-child:not(.nav__item--prev) {
       padding-left: ($nav-link-padding-x * 2);
     }
   }
